--- a/src/components/Layout/Header.module.scss
+++ b/src/components/Layout/Header.module.scss
@@ -26,3 +26,11 @@
     transform: rotateZ(-5deg) translateY(-4rem) translateX(-1rem);
   }
 }
+
+@media (max-width: 576px) {
+  .header {
+    h1 {
+      font-size: 24px;
+    }
+  }
+}
