--- a/src/components/Layout/HeaderCartButton.module.scss
+++ b/src/components/Layout/HeaderCartButton.module.scss
@@ -55,3 +55,17 @@
     transform: scale(1);
   }
 }
+
+@media (max-width: 576px) {
+  .sm-hide {
+    display: none;
+  }
+  .badge {
+    padding: 0.25rem 1rem;
+    margin-left: 0.5rem;
+  }
+
+  .button {
+    padding: 0.75rem 1rem;
+  }
+}
