--- a/src/components/Meals/MealsSummary.module.scss
+++ b/src/components/Meals/MealsSummary.module.scss
@@ -15,3 +15,14 @@
     margin-top: 0;
   }
 }
+
+@media (max-width: 576px) {
+  .summary {
+    h2 {
+      font-size: 1.2rem;
+    }
+    p {
+      font-size: 0.9rem;
+    }
+  }
+}
